scripts/case14-mtls.yaml
1. 新建ns，部署客户端服务
k create ns testauth
k apply -f samples/sleep/sleep.yaml -n testauth

2. 测试访问 default httpbin的连通性
k exec -it -n testauth sleep-8f795f47d-9trxh -c sleep -- curl http://httpbin.default:8000/ip

3. 配置兼容模式的认证策略
kubectl apply -f - <<EOF
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "default"
spec:
  mtls:
    mode: PERMISSIVE
EOF

4. 严格模式
kubectl apply -f - <<EOF
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "default"
spec:
  mtls:
    mode: STRICT
EOF

5. 注入即可访问
kubectl apply -f <(bin/istioctl kube-inject -f samples/sleep/sleep.yaml) -n testauth

# 添加全局策略，只添加
kubectl apply -f - <<EOF
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
spec:
  mtls:
    mode: STRICT
EOF
