scripts/case06-timeout-retry.yaml
1. 给 ratings 服务添加延迟（接case05）

2. 给review服务添加超时设置（<2s)
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
    timeout: 1s

3. 删除重试（先删除timeout）
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 5s
    route:
    - destination:
        host: ratings
        subset: v1
    retries:
      attempts: 2
      perTryTimeout: 1s

4. 查看ratings容器log确认

5. 服务不可用原因：2*1<5；调大timeout测试
